--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A starting point for the CSS Frameworks CA project",
   "scripts": {
     "test": "echo \"We will learn more about testing in the Workflow course\" && exit 1",
-    "build": "sass scss:css"
+    "build": "sass scss:css",
+    "watch": "sass src/scss:dist/css --watch",
+    "start": "live-server",
+    "dev": "npm-run-all --parallel watch start"
   },
   "repository": {
     "type": "git",
@@ -29,6 +32,8 @@
     "bootstrap": "^5.3.2"
   },
   "devDependencies": {
+    "live-server": "^1.2.2",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.70.0"
   }
 }
