--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bootstrap-ca",
   "version": "0.0.1",
-  "description": "A starting point for the CSS Frameworks CA project",
+  "description": "JS2 project",
   "scripts": {
     "test": "echo \"We will learn more about testing in the Workflow course\" && exit 1",
-    "build": "sass scss:css",
-    "watch": "sass src/scss:dist/css --watch",
+    "build": "sass src/scss:dist/css",
+    "watch": "sass --watch src/scss:dist/css",
     "start": "live-server",
     "dev": "npm-run-all --parallel watch start"
   },
@@ -34,6 +34,6 @@
   "devDependencies": {
     "live-server": "^1.2.2",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.70.0"
+    "sass": "^1.77.8"
   }
 }
